--- a/.github/workflows/GitC.yml
+++ b/.github/workflows/GitC.yml
@@ -14,11 +14,11 @@ jobs:
   steps: 
    -uses: actions/checkout@v3
    -uses: iterative/setup-cml@v1
-   -name: step1
-    env:
-     REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
-    run: |
-     python -m pip install --upgrade pip
-     pip install -r requirements.txt
-     python GitHubClasswork.ipynb
+  name: step1
+   env:
+    REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  run: |
+   python -m pip install --upgrade pip
+   pip install -r requirements.txt
+   python GitHubClasswork.ipynb
 
