--- a/.github/workflows/GitC.yml
+++ b/.github/workflows/GitC.yml
@@ -10,15 +10,17 @@ jobs:
  job1:
   runs-on: ubuntu-latest
   container: docker://ghcr.io/iterative/cml:0-dvc2-base1
-  timeout-minutes: 20
-  steps: 
-   -uses: actions/checkout@v3
-   -uses: iterative/setup-cml@v1
-  name: step1
+  timeout-minutes: 120
+  steps:
+   uses: actions/checkout@v3
+   uses: iterative/setup-cml@v1
+  name: Step1
    env:
     REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
   run: |
    python -m pip install --upgrade pip
    pip install -r requirements.txt
    python GitHubClasswork.ipynb
+  
+   
 
