--- a/.github/workflows/GitC.yml
+++ b/.github/workflows/GitC.yml
@@ -1,26 +1,26 @@
 name: TakuWorkflow
 on:
- push:
-  branches:
-  - main
+  push:
+    branches:
+      - main
 permissions:
- id-token: write
- contents: write
+  id-token: write
+  contents: write
 jobs:
- job1:
-  runs-on: ubuntu-latest
-  container: docker://ghcr.io/iterative/cml:0-dvc2-base1
-  timeout-minutes: 120
-  steps:
-   uses: actions/checkout@v3
-   uses: iterative/setup-cml@v1
-  name: Step1
-   env:
-    REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  run: |
-   python -m pip install --upgrade pip
-   pip install -r requirements.txt
-   python GitHubClasswork.ipynb
+  job1:
+    runs-on: ubuntu-latest
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
+    # Set the timeout for this step to 10 minutes
+    timeout-minutes: 120
+    steps:
+      - uses: actions/checkout@v3
+      - uses: iterative/setup-cml@v1
+      - name: Step1
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python GitHubClasswork.ipynb
   
-   
 
