--- a/.github/workflows/GitC.yml
+++ b/.github/workflows/GitC.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: iterative/setup-cml@v1
-      - name: Step1
+      - name: step1
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
