--- a/.github/workflows/GitC.yml
+++ b/.github/workflows/GitC.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python GitHubClasswork.ipynb
+          python Taku.py
   
 
